# casbin-cpp

./: .gitignore  CMakeLists.txt
casbin/: config.h  enforcer.h  enforcer_interface.h  framework.h  model.h
casbin/config/: config.cpp
casbin/effect/: Effector.h  default_effector.h
casbin/model/: Model.h  assertion.cpp  function.cpp  model.cpp
casbin/persist/: Adapter.h  adapter.cpp  batch_adapter.h  default_watcher.h  filtered_adapter.h  watcher_ex.h
casbin/persist/file_adapter/: file_adapter.h
casbin/util/: built_in_functions.cpp
