cmake_minimum_required(VERSION 3.10.0)
project(casbin)


set(CASBIN_HEADERS
    casbin/config.h
    casbin/config/Config.h
    casbin/config/config_interface.h
    casbin/config/pch.h
    casbin/duktape.h
    casbin/duktape/duktape.h
    casbin/duktape/duk_config.h
    casbin/duktape/pch.h
    casbin/effect.h
    casbin/effect/default_effector.h
    casbin/effect/Effect.h
    casbin/effect/Effector.h
    casbin/effect/pch.h
    casbin/enforcer.h
    casbin/enforcer_interface.h
    casbin/exception.h
    casbin/exception/casbin_adapter_exception.h
    casbin/exception/casbin_enforcer_exception.h
    casbin/exception/casbin_rbac_exception.h
    casbin/exception/illegal_argument_exception.h
    casbin/exception/io_exception.h
    casbin/exception/missing_required_sections.h
    casbin/exception/pch.h
    casbin/exception/unsupported_operation_exception.h
    casbin/ip_parser/exception/ParserException.h
    casbin/ip_parser/parser/allFF.h
    casbin/ip_parser/parser/byte.h
    casbin/ip_parser/parser/CIDR.h
    casbin/ip_parser/parser/CIDRMask.h
    casbin/ip_parser/parser/dtoi.h
    casbin/ip_parser/parser/equal.h
    casbin/ip_parser/parser/IP.h
    casbin/ip_parser/parser/IPMask.h
    casbin/ip_parser/parser/IPNet.h
    casbin/ip_parser/parser/IPv4.h
    casbin/ip_parser/parser/parseCIDR.h
    casbin/ip_parser/parser/parseIP.h
    casbin/ip_parser/parser/parseIPv4.h
    casbin/ip_parser/parser/parseIPv6.h
    casbin/ip_parser/parser/pch.h
    casbin/ip_parser/parser/Print.h
    casbin/ip_parser/parser/xtoi.h
    casbin/model.h
    casbin/model/Assertion.h
    casbin/model/Function.h
    casbin/model/Model.h
    casbin/model/scope_config.h
    casbin/persist.h
    casbin/persist/Adapter.h
    casbin/persist/batch_adapter.h
    casbin/persist/default_watcher.h
    casbin/persist/default_watcher_ex.h
    casbin/persist/file_adapter/batch_file_adapter.h
    casbin/persist/file_adapter/file_adapter.h
    casbin/persist/file_adapter/pch.h
    casbin/persist/file_adapter/filtered_file_adapter.h
    casbin/persist/filtered_adapter.h
    casbin/persist/Watcher.h
    casbin/persist/watcher_ex.h
    casbin/rbac.h
    casbin/rbac/default_role_manager.h
    casbin/rbac/pch.h
    casbin/rbac/role_manager.h
    casbin/util.h
    casbin/util/built_in_functions.h
    casbin/util/pch.h
    casbin/util/util.h
)
set(CASBIN_SOURCES
    casbin/config/config.cpp
    casbin/duktape/duktape.cpp
    casbin/effect/default_effector.cpp
    casbin/enforcer.cpp
    casbin/exception/casbin_adapter_exception.cpp
    casbin/exception/casbin_enforcer_exception.cpp
    casbin/exception/casbin_rbac_exception.cpp
    casbin/exception/illegal_argument_exception.cpp
    casbin/exception/io_exception.cpp
    casbin/exception/missing_required_sections.cpp
    casbin/exception/unsupported_operation_exception.cpp
    casbin/internal_api.cpp
    casbin/ip_parser/exception/ParserException.cpp
    casbin/ip_parser/parser/allFF.cpp
    casbin/ip_parser/parser/CIDRMask.cpp
    casbin/ip_parser/parser/dtoi.cpp
    casbin/ip_parser/parser/equal.cpp
    casbin/ip_parser/parser/IP.cpp
    casbin/ip_parser/parser/IPNet.cpp
    casbin/ip_parser/parser/IPv4.cpp
    casbin/ip_parser/parser/parseCIDR.cpp
    casbin/ip_parser/parser/parseIP.cpp
    casbin/ip_parser/parser/parseIPv4.cpp
    casbin/ip_parser/parser/parseIPv6.cpp
    casbin/ip_parser/parser/Print.cpp
    casbin/ip_parser/parser/xtoi.cpp
    casbin/management_api.cpp
    casbin/model/assertion.cpp
    casbin/model/function.cpp
    casbin/model/model.cpp
    casbin/model/scope_config.cpp
    casbin/persist/adapter.cpp
    casbin/persist/default_watcher.cpp
    casbin/persist/default_watcher_ex.cpp
    casbin/persist/file_adapter/batch_file_adapter.cpp
    casbin/persist/file_adapter/file_adapter.cpp
    casbin/persist/file_adapter/filtered_file_adapter.cpp
    casbin/rbac/default_role_manager.cpp
    casbin/rbac_api.cpp
    casbin/rbac_api_with_domains.cpp
    casbin/util/array_equals.cpp
    casbin/util/array_remove_duplicates.cpp
    casbin/util/array_to_string.cpp
    casbin/util/built_in_functions.cpp
    casbin/util/ends_with.cpp
    casbin/util/escape_assertion.cpp
    casbin/util/find_all_occurences.cpp
    casbin/util/is_instance_of.cpp
    casbin/util/join.cpp
    casbin/util/join_slice.cpp
    casbin/util/remove_comments.cpp
    casbin/util/set_subtract.cpp
    casbin/util/split.cpp
    casbin/util/trim.cpp
)

add_library(${PROJECT_NAME} SHARED ${CASBIN_SOURCES} ${CASBIN_HEADERS})
